# BioComModule

./: CMakeLists.txt  README.md  main.cpp
com/: BioCom.cpp  BioCom.h  CMakeLists.txt
